--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ header {
     padding: 30px 10px
 }
     header > h1 {
+        font-variant: small-caps; /*deixa as letras maiusculas porém pequenas*/
         text-align: center;
         margin-bottom: 12px ;
     }
