--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 }
 
 * {
+    font-size: 16px;
     margin: 0px;
     padding: 0px ;
 }
@@ -31,8 +32,20 @@ header {
     }
     header > p {
         text-align: center;
+        margin-bottom: 12px ;
+    }
+    header > p > a {
+        color: var(--cor2);
+        font-weight: bolder;
+        text-decoration: none;
+        
+    }
+    header > p > a:hover {
+        text-decoration: underline;
     }
 
+
+    
 main 
     .normal {
         background-color: var(--cor2);
@@ -41,3 +54,12 @@ main
     .imagem {
         background: url();
     }
+
+
+
+footer {
+    color: var(--cor2);
+    background-color: var(--cor1);
+    text-align: center;
+    padding: 11px;
+}
