--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,12 @@ header {
 section {
     padding-top: 10vh;
     padding-left: 30px;
-    padding-bottom: 10vh;
+    padding-bottom: 5vh;
 }
     section > p {
         font-family: var(--font-body) ;
         line-height: 2em;
-        font-size: 2.7vw;
+        font-size: 2.8vw;
         margin: 5px;
     }
 
@@ -67,35 +67,64 @@ section {
         background-color: white ;
         color: black;
     }
+        .normal > p {
+            padding-bottom: 10vh;
+        }
+
     .imagem {
         background-color:black;
         color: white ;
     }
-    .imagem > p {
-        text-align: justify;
-        width: 33%;
-        padding: 10px ;
-        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.724);
-    }
-        #img01 {
-            background: url(https://www.ultraimagehub.com/wallpapers/tr:flp-false,gx-0.8,gy-1,q-75,rh-3264,rw-5824,th-1080,tw-1920/1247495878370005082.jpeg);
-            background-repeat: no-repeat;
-            background-size: cover ;
-            position: right center;
-            font-style: italic;
-        }
-            #img01 > p {
-                background-color: rgba(121, 44, 103, 0.267) ;
+        .imagem > p {
+            text-align: justify;
+            width: 37%;
+            padding: 10px ;
+            box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.724);
+        } 
+            #img01 {
+                background: url(https://www.ultraimagehub.com/wallpapers/tr:flp-false,gx-0.8,gy-1,q-75,rh-3264,rw-5824,th-1080,tw-1920/1247495878370005082.jpeg);
+                background-repeat: no-repeat;
+                background-size: cover ;
+                position: right center;
+                font-style: italic;
             }
+                #img01 > p {
+                    background: linear-gradient(to left,#792c6744, #0026ff38 );
+                    font-weight: 100 ;
+                }
 
-        #img02 {
-            background: url(https://lptc.com.br/wp-content/uploads/2023/10/texture-handwriting-sutterlin-vintage-99562.jpeg);
-            background-repeat: no-repeat;
-            background-size: cover ;
-            position: left center;
-            font-style: italic;
-        }
-            #img02 > p {
-                background-color: rgba(255, 225, 0, 0.246) ;
+            #img02 {
+                background: url(https://lptc.com.br/wp-content/uploads/2023/10/texture-handwriting-sutterlin-vintage-99562.jpeg);
+                background-repeat: no-repeat;
+                background-size: cover ;
+                position: left center;
+                font-style: italic;
+                
             }
+                #img02 > p {
+                    background: linear-gradient(to left, #ffff0019, #ffd9000c);
+                    font-weight: 100 ;
+                }
+
+footer {
+    background-color: black;
+    color: white ;
+    font-family: var(--font-body);
+    text-align: center ;
+
+}
+    footer > p {
+        font-size: 20px ;
+    }
+
+    footer > p > a {
+        color: white ;
+        font-size: 20px ;
+        text-decoration: none ;
+    }
+    footer > p > a:hover {
+        font-weight: bolder;
+        text-decoration: underline;
+        font-size: 24px;
+    }
 
